# livetextify

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: release-linux.yml  release-mac.yml  release-windows.yml  release.yml
android/src/com/salih/livetextify/: PermissionManager.java
packaging/linux/: liveTextify.desktop
platform/android/: AndroidManifest.xml
platform/android/src/com/salih/livetextify/: LiveTextifyActivity.java
platform/macos/: Info.plist
qml/: CMakeLists.txt
qml/desktop/: Main.qml
qml/desktop/components/: ActiveSessionCard.qml  BentoCard.qml  BouncingDots.qml  DashboardHero.qml  DashboardWidgetGrid.qml  EndSessionButton.qml  FloatingActionButton.qml  HistoricalSessionCard.qml  HistoricalSessionsGrid.qml  LiveChatTab.qml  LiveQATab.qml  LiveTranscriptTab.qml  LoadingIndicator.qml  MessageDialog.qml  ModelListCard.qml  ModelListGrid.qml  ModelTypeTabs.qml  NewSessionDialog.qml  PageBackground.qml  PageHeader.qml  QuickActionCard.qml  RecentActivityCard.qml  ResourceMonitorBar.qml  SessionBottomNav.qml  SessionControlSidebar.qml  SessionFilterBar.qml  SessionInfoHeader.qml  SessionMetricsSidebar.qml  SessionRagFooter.qml  SessionSettingsPanel.qml  SessionSettingsView.qml  SettingsAppearance.qml  SettingsAudio.qml  SettingsBackground.qml  SettingsEmbedding.qml  SettingsFooterActions.qml  SettingsHeader.qml  SettingsInput.qml  SettingsInterface.qml  SettingsLLM.qml  (+16 more)
qml/desktop/pages/: DashboardPage.qml  LiveSessionPage.qml  MainPage.qml  ModelLibraryPage.qml  ProfilePage.qml  SessionPage.qml  SettingsPage.qml
qml/desktop/singletons/: AppSettings.qml  AppState.qml  Fonts.qml  Navigator.qml  Theme.qml
qml/mobile/: Main.qml
qml/mobile/components/: IconButton.qml
qml/mobile/pages/: MainPage.qml
qml/mobile/singletons/: App.qml  Fonts.qml  SoundEffects.qml  Theme.qml
resources/data/: embedding_models.json  llama_models.json  whisper_models.json
src/: CMakeLists.txt  main.cpp
src/liveTextify/: types.h
src/liveTextify/core/: AppError.h  Logger.cpp  Logger.h  app.cpp  app.h  resourcemanager.cpp  resourcemanager.h  resourcemonitor.cpp  resourcemonitor.h
src/liveTextify/interfaces/: IAudioSource.h  IDumpInterface.h  IEmbeddingEngine.h  ILlmEngine.h  ISttEngine.h
src/liveTextify/modules/audio/: audiorecorder.cpp  audiorecorder.h  audioutils.cpp  audioutils.h  audiowindowprocessor.cpp  audiowindowprocessor.h
src/liveTextify/modules/chat/: Message.h  conversation.cpp  conversation.h  messagemodel.cpp  messagemodel.h
src/liveTextify/modules/database/: databasemanager.cpp  databasemanager.h
src/liveTextify/modules/database/repositories/: chunkrepository.cpp  chunkrepository.h  messagerepository.cpp  messagerepository.h  sessionrepository.cpp  sessionrepository.h  transcriptionrepository.cpp  transcriptionrepository.h
src/liveTextify/modules/engines/: common.h
src/liveTextify/modules/engines/emb/: embsession.cpp  embsession.h  llamaembeddingengine.cpp  llamaembeddingengine.h
src/liveTextify/modules/engines/llm/: llamallmengine.cpp  llamallmengine.h  llmsession.cpp  llmsession.h
src/liveTextify/modules/engines/stt/: sttsession.cpp  sttsession.h  whispersttengine.cpp  whispersttengine.h
src/liveTextify/modules/models/: filedownloader.cpp  filedownloader.h  modellistmodel.cpp  modellistmodel.h  modelmanager.cpp  modelmanager.h  modeltypemanager.cpp  modeltypemanager.h
src/liveTextify/modules/rag/: ragtextchunker.cpp  ragtextchunker.h
src/liveTextify/modules/services/: aiservice.cpp  aiservice.h  audioservice.cpp  audioservice.h  chatservice.cpp  chatservice.h  conversationservice.cpp  conversationservice.h  databaseservice.cpp  databaseservice.h  questionservice.cpp  questionservice.h  ragservice.cpp  ragservice.h  sessionservice.cpp  sessionservice.h  transcriptionservice.cpp  transcriptionservice.h
src/liveTextify/modules/session/: SessionRecord.h  session.cpp  session.h  sessionconfigmanager.cpp  sessionconfigmanager.h  sessionmanager.cpp  sessionmanager.h  sessionmodel.cpp  sessionmodel.h  sessionsettings.cpp  sessionsettings.h
src/liveTextify/modules/settings/: audioconfigmanager.cpp  audioconfigmanager.h  embconfigmanager.cpp  embconfigmanager.h  llmconfigmanager.cpp  llmconfigmanager.h  ragconfigmanager.cpp  ragconfigmanager.h  settingsmanager.cpp  settingsmanager.h  sttconfigmanager.cpp  sttconfigmanager.h
src/liveTextify/platform/: PlatformManager.cpp  PlatformManager.h
src/liveTextify/platform/android/: AndroidPlatformManager.cpp  AndroidPlatformManager.h  androidbridge.cpp  androidbridge.h
src/liveTextify/platform/ios/: IOSPlatformManager.cpp  IOSPlatformManager.h
